hands-on/istio/lab1-apply-istio/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-fare
spec:
  host: m-caj-fare
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-masterfile
spec:
  host: m-caj-masterfile
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-mock-tvm
spec:
  host: m-caj-mock-tvm
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-payment
spec:
  host: m-caj-payment
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-reservation
spec:
  host: m-caj-reservation
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-schedule
spec:
  host: m-caj-schedule
  subsets:
  - labels:
      version: v1
    name: v1
